# rust_axum_seaorm_backend_experimental

./: Cargo.toml
migration/: Cargo.toml
src/: errors.rs  lib.rs  main.rs
src/cache/: mod.rs
src/cache/drivers/: inmem.rs  mod.rs  null.rs
src/config/: app_context.rs  db.rs  format.rs  mod.rs  routes_config.rs
src/controllers/: tasks_controller.rs
src/entity/: mod.rs  task.rs
