[package]
name = "pos_rust_local_backend"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = [".", "migration"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.8.1", features = ["macros"]}
tokio = {version = "1.42.0", features = ["full"]}
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
dotenvy = "0.15.7"
#sea-orm = {version = "1.1.3", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"]}
serde = {version = "1.0.217", features = ["derive"]}
sea-orm = { version = "1.1.3", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros","debug-print"]}

# For sea-orm codegen
#entity = { path = "entity" }
migration = { path = "migration" }
serde_json = "1.0.134"
async-trait = "0.1.84"
uuid = "1.11.0"
thiserror = "1.0.69"
hyper = "1.5.2"
bytes = "1.9.0"
axum-core = "0.5.0"
colored = "2.2.0"
moka = { version = "0.12.8", features = ["sync"] }
env_logger = "0.11.6"
log = "0.4.22"
tracing = "0.1.41"
